--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,6 +18,11 @@
 
 <!-- Appel du composant Formulaire -->
 <app-formulaire></app-formulaire>
+<!-- Appel du composant FormControl-->
+<app-form-control></app-form-control>
+<hr>
+<!-- Appel du composant FormGroup-->
+<app-form-group></app-form-group>
 
 <!-- Section Post-->
 <section>
