--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p>app.component works!</p>
 <!-- Wrapper -->
 <div id="wrapper">
 
@@ -8,12 +9,12 @@
       <!-- Header -->
       <app-header></app-header>
 
-      <!-- <router-outlet></router-outlet> -->
-      <app-home></app-home>
+      <router-outlet></router-outlet>
+<!--      <app-home></app-home>-->
 
     </div>
   </div>
 
   <!-- Sidebar -->
-  <!--<app-sidebar></app-sidebar>-->
+  <app-sidebar></app-sidebar>
 </div>
