--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,17 +1,11 @@
+<p>menu.component works!</p>
 <nav id="menu">
   <header class="major">
     <h2>Menu</h2>
   </header>
   <ul>
-    <li><a href="index.html">Homepage</a></li>
-    <li><a href="generic.html">Generic</a></li>
-    <li><a href="elements.html">Elements</a></li>
+    <li><a href="/">Homepage</a></li> <!-- Remplacer le href par routerLink -->
+    <!--<li><a routerLink="/editor">Editeur</a></li>-->
     <li><app-sous-menu></app-sous-menu></li>
-    <li><a href="#">Etiam Dolore</a></li>
-    <li><a href="#">Adipiscing</a></li>
-    <li><app-sous-menu></app-sous-menu></li>
-    <li><a href="#">Maximus Erat</a></li>
-    <li><a href="#">Sapien Mauris</a></li>
-    <li><a href="#">Amet Lacinia</a></li>
   </ul>
 </nav>
