--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<p>home.component works!</p>
 <!-- Banner -->
 <section id="banner">
   <div class="content">
@@ -17,12 +18,12 @@
 </section>
 
 <!-- Appel du composant Formulaire -->
-<app-formulaire></app-formulaire>
+<!--<app-formulaire></app-formulaire>-->
 <!-- Appel du composant FormControl-->
-<app-form-control></app-form-control>
+<!--<app-form-control></app-form-control>-->
 <hr>
 <!-- Appel du composant FormGroup-->
-<app-form-group></app-form-group>
+<!--<app-form-group></app-form-group>-->
 
 <!-- Section Post-->
 <section>
