--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,12 +8,12 @@
       <!-- Header -->
       <app-header></app-header>
 
-      <!-- <router-outlet></router-outlet> -->
-      <app-home></app-home>
+      <router-outlet></router-outlet>
+      <!--<app-home></app-home>-->
 
     </div>
   </div>
 
   <!-- Sidebar -->
-  <!--<app-sidebar></app-sidebar>-->
+  <app-sidebar></app-sidebar>
 </div>
