--- a/src/app/components/menu/sous-menu/sous-menu.component.html
+++ b/src/app/components/menu/sous-menu/sous-menu.component.html
@@ -1,7 +1,6 @@
-  <span class="opener">Another Submenu</span>
+  <span class="opener">Editeur</span>
   <ul>
-    <li><a href="#">Lorem Dolor</a></li>
-    <li><a href="#">Ipsum Adipiscing</a></li>
-    <li><a href="#">Tempus Magna</a></li>
-    <li><a href="#">Feugiat Veroeros</a></li>
+    <li><a routerLink="/editor">Formulaire par défaut</a></li>
+    <li><a routerLink="/editor/form-control">Form Control</a></li>
+    <li><a routerLink="/editor/reactive-form/">Formulaire réactif</a></li>
   </ul>
