--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -5,5 +5,6 @@
   <ul>
     <li><a routerLink="/">Homepage</a></li> <!-- Remplacer le href par routerLink -->
     <li><app-sous-menu></app-sous-menu></li>
+    <li><a routerLink="/json-server">Post HTTP</a></li>
   </ul>
 </nav>
