BehaviorSubject : application sur interface de Login

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,11 @@
+<p>sidebar works!</p>
 <div id="sidebar">
   <div class="inner">
+
+    <section>
+      <p>Bonjour : {{currentUserName}}</p>
+      <button *ngIf="currentUserName !== 'Anonyme'" (click)="logout()" class="primary">Déconnexion</button>
+    </section>
 
     <!-- Search -->
     <section id="search" class="alt">
